--- a/practice/double-well-overdamped.ipynb
+++ b/practice/double-well-overdamped.ipynb
@@ -15,11 +15,11 @@
     "from sklearn.decomposition import PCA \n",
     "from IPython.display import display, Latex\n",
     "\n",
-    "from randnn import downsample, downsample_split, avg_over\n",
-    "from randnn.utils import np_cache, eigsort\n",
+    "from pynamics import downsample, downsample_split, avg_over\n",
+    "from pynamics.utils import np_cache, eigsort\n",
+    "from pynamics.systems import DoubleWell\n",
     "from randnn.plotting import *\n",
-    "from randnn.systems import DoubleWell\n",
-    "from randnn.transfer_operator import *\n",
+    "from pytransfer.transfer_operator import *\n",
     "\n",
     "rc('text', usetex=True)\n",
     "# logging.basicConfig(level=logging.INFO)\n",
