--- a/output/randnn-transfer-operator.ipynb
+++ b/output/randnn-transfer-operator.ipynb
@@ -14,11 +14,11 @@
     "from matplotlib import rc\n",
     "from sklearn.decomposition import PCA\n",
     "\n",
-    "from randnn import ContinuousNN, get_attractor_dimension, scaling_analysis, downsample, downsample_split, avg_over\n",
-    "from randnn.utils import np_cache, eigsort, count_cycles\n",
+    "from randnn import ContinuousNN, scaling_analysis\n",
+    "from pynamics import get_attractor_dimension, downsample, downsample_split, avg_over\n",
+    "from pynamics.utils import np_cache, eigsort, count_cycles\n",
     "from randnn.plotting import *\n",
-    "from randnn.systems import DoubleWell\n",
-    "from randnn.transfer_operator import *\n",
+    "from pytransfer.transfer_operator import *\n",
     "\n",
     "rc('text', usetex=True)\n",
     "#logging.basicConfig(level=logging.INFO)"
