--- a/practice/lorenz.ipynb
+++ b/practice/lorenz.ipynb
@@ -16,11 +16,11 @@
     "from IPython.display import display, Latex\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "\n",
-    "from randnn import downsample, downsample_split, avg_over\n",
-    "from randnn.utils import np_cache, eigsort\n",
-    "from randnn.plotting import *\n",
-    "from randnn.systems import Lorenz\n",
-    "from randnn.transfer_operator import *\n",
+     "from pynamics import downsample, downsample_split, avg_over\n",
+     "from pynamics.utils import np_cache, eigsort\n",
+     "from pynamics.systems import Lorenz\n",
+     "from randnn.plotting import *\n",
+     "from pytransfer.transfer_operator import *\n",
     "\n",
     "rc('text', usetex=True)\n",
     "#logging.basicConfig(level=logging.INFO)\n",
